--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BetterWeb</title>
 
-    <!-- Bootstrap 3.3.7 compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- Styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
+          integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link href="./build/main.bundle.css" rel="stylesheet">
   </head>
   <body>
+    <div id="wrapper" class="container-fluid">
+      <div class="row flex-xl-nowrap h-100">
+        <div class="side-menu">
+          <div class="logo"><a href="#">BetterWeb logo</a></div>
+          <button type="button" role="button" class="elements-panel-toggle">Toggle elements panel</button>
+        </div>
 
+        <div class="container-fluid">
+          <div class="row flex-nowrap h-100">
+            <section id="content" class="col-9 col-md-9 col-xl-10 h-100">
+              <div class="top-bar">
+                <div class="pull-left">
+                  <p class="page-name">Page: page name</p>
+
+                  <div class="actions">
+                    <button type="button" role="button" class="btn step-back">Back</button>
+                    <button type="button" role="button" class="btn step-forward">Forward</button>
+                  </div>
+                </div>
+
+                <div class="pull-center">
+                  <div class="screen-types">
+                    <button type="button" role="button">Desktop</button>
+                    <button type="button" role="button">Table</button>
+                    <button type="button" role="button">Mobile landscape</button>
+                    <button type="button" role="button">Mobile portrait</button>
+                  </div>
+                </div>
+
+                <div class="pull-right">
+                  <div class="options">
+                    <button type="button" role="button">Preview</button>
+                    <button type="button" role="button">Export</button>
+                    <button type="button" role="button">Publish</button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row flex-nowrap">
+                <div class="col-3 col-md-3 col-xl-2 elements-panel">
+                  <button type="button" role="button" class="close">Close panel</button>
+                  <div class="elements-block">
+                    <h2>Basics</h2>
+
+                    <ul class="elements-list">
+                      <li><a href="#">Section</a></li>
+                      <li><a href="#">Columns</a></li>
+                      <li><a href="#">Div</a></li>
+                      <li><a href="#">Button</a></li>
+                      <li><a href="#">Heading</a></li>
+                      <li><a href="#">Text Block</a></li>
+                      <li><a href="#">Link</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="elements-block">
+                    <h2>Components</h2>
+
+                    <ul class="elements-list">
+                      <li><a href="#">Form</a></li>
+                      <li><a href="#">Input</a></li>
+                      <li><a href="#">Autocomplete</a></li>
+                      <li><a href="#">Datepicker</a></li>
+                      <li><a href="#">Dropdown</a></li>
+                      <li><a href="#">Submit Button</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-12 col-md-12 col-xl-12"></div>
+              </div>
+            </section>
+
+            <aside id="sidebar" class="col-3 col-md-3 col-xl-2 h-100">
+              <p class="element-name">Element: Section</p>
+
+              <div class="settings-block">
+                <h2>Settings</h2>
+
+                <form action="#" class="element-settings">
+                  <row>
+                    <label for="element-width">Width:</label>
+                    <select name="element-width" id="element-width"></select>
+                  </row>
+                  <row>
+                    <label for="element-id"></label>
+                    <input type="text" id="element-id">
+                  </row>
+                </form>
+              </div>
+
+              <div class="settings-block">
+                <div class="top-panel">
+                  <form action="#">
+                    <label for="element-class">Class:</label>
+                    <input type="text" name="element-class" id="element-class" value=".section-1">
+                  </form>
+                </div>
+                <h2>Basic styles</h2>
+                <form action="#" class="element-settings">
+                  <row>
+                    <label for="element-paddings">Paddings:</label>
+                    <input type="text" id="element-paddings">
+                  </row>
+                  <row>
+                    <label for="element-margins">Margins:</label>
+                    <input type="text" id="element-margins">
+                  </row>
+                  <row>
+                    <label for="element-bg-color">BG color</label>
+                    <input type="text" id="element-bg-color">
+                  </row>
+                  <row>
+                    <label for="element-bg-image">BG image</label>
+                    <input type="text" id="element-bg-image">
+                  </row>
+                  <row>
+                    <label for="element-alignment">Alignment:</label>
+                    <select name="element-alignment" id="element-alignment"></select>
+                  </row>
+                </form>
+              </div>
+            </aside>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
     <script src="./build/main.bundle.js"></script>
   </body>
 </html>
