--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="wrapper" class="container-fluid">
-    <div class="row flex-nowrap h-100">
+    <div class="row flex-nowrap">
       <!-- left-panel start -->
       <aside class="left-panel">
         <div class="logo"><a href="#">BetterWeb logo</a></div>
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <div class="row flex-nowrap h-100">
           <!-- content start -->
-          <section id="content" class="col-9 col-md-9 col-xl-10 h-100">
+          <section id="main" class="col-9 col-md-9 col-xl-10">
             <!-- top-bar start -->
             <div class="top-bar d-flex justify-content-between align-items-center">
               <div class="d-flex justify-content-start align-items-center">
@@ -36,70 +36,67 @@
                 </div>
               </div>
 
-              <div class="">
-                <div class="screen-types">
-                  <button type="button" role="button" class="active">
-                    <img src="./images/android-desktop.svg" alt="desktop view">
-                  </button>
-                  <button type="button" role="button">
-                    <img src="./images/ipad.svg" alt="tablet view">
-                  </button>
-                  <button type="button" role="button">
-                    <img src="./images/android-phone-landscape.svg" alt="landscape view">
-                  </button>
-                  <button type="button" role="button">
-                    <img src="./images/android-phone-portrait.svg" alt="portrait view">
-                  </button>
-                </div>
+              <div class="screen-types">
+                <button type="button" role="button" class="active">
+                  <img src="./images/android-desktop.svg" alt="desktop view">
+                </button>
+                <button type="button" role="button">
+                  <img src="./images/ipad.svg" alt="tablet view">
+                </button>
+                <button type="button" role="button">
+                  <img src="./images/android-phone-landscape.svg" alt="landscape view">
+                </button>
+                <button type="button" role="button">
+                  <img src="./images/android-phone-portrait.svg" alt="portrait view">
+                </button>
               </div>
 
-              <div class="">
-                <div class="options">
-                  <button type="button" aria-label="Preview" class="btn">Preview</button>
-                  <button type="button" aria-label="Export" class="btn">Export</button>
-                  <button type="button" aria-label="Publish" class="btn">Publish</button>
-                </div>
+              <div class="options">
+                <button type="button" aria-label="Preview" class="btn">Preview</button>
+                <button type="button" aria-label="Export" class="btn">Export</button>
+                <button type="button" aria-label="Publish" class="btn">Publish</button>
               </div>
             </div>
             <!-- top-bar end -->
 
-            <div class="row flex-nowrap">
+            <div class="content row flex-nowrap position-relative">
               <!-- elements-panel start -->
-              <div class="col-3 col-md-3 col-xl-2 elements-panel">
+              <div class="col-3 col-md-3 col-xl-2 elements-panel position-absolute">
                 <button type="button" aria-label="Close" class="close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <div class="elements-block">
+                <div class="elements-section">
                   <h2>Basics</h2>
 
                   <ul class="elements-list">
-                    <li><a href="#">Section</a></li>
-                    <li><a href="#">Columns</a></li>
-                    <li><a href="#">Div</a></li>
-                    <li><a href="#">Button</a></li>
-                    <li><a href="#">Heading</a></li>
-                    <li><a href="#">Text Block</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a id="drag1" href="#" draggable="true" ondragstart="drag(event)">Section</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Columns</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Div</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Button</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Heading</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Text Block</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Link</a></li>
                   </ul>
                 </div>
 
-                <div class="elements-block">
+                <div class="elements-section">
                   <h2>Components</h2>
 
                   <ul class="elements-list">
-                    <li><a href="#">Form</a></li>
-                    <li><a href="#">Input</a></li>
-                    <li><a href="#">Autocomplete</a></li>
-                    <li><a href="#">Datepicker</a></li>
-                    <li><a href="#">Dropdown</a></li>
-                    <li><a href="#">Submit Button</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Container</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Form</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Input</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Autocomplete</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Datepicker</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Dropdown</a></li>
+                    <li><a href="#" draggable="true" ondragstart="drag(event)">Submit Button</a></li>
                   </ul>
                 </div>
               </div>
               <!-- elements-panel end -->
 
               <!-- page-creation-area start -->
-              <div class="col-12 col-md-12 col-xl-12"></div>
+              <div class="col-12 col-md-12 col-xl-12" id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
               <!-- page-creation-area end -->
             </div>
           </section>
@@ -109,62 +106,123 @@
           <aside id="sidebar" class="col-3 col-md-3 col-xl-2 h-100">
             <p class="element-name mb-0">Element: Section</p>
 
-            <div class="settings-block">
+            <!-- settings form -->
+            <form class="element-settings">
               <p class="empty-block-text">Select element on the canvas to activate this panel</p>
-            </div>
+            </form>
+            <!-- settings form end -->
 
-            <div class="settings-block">
-              <h2>Settings</h2>
-
-              <form action="#" class="element-settings">
+            <!-- settings form -->
+            <form class="element-settings">
+              <h2 class="opened">Settings</h2>
+              <div class="holder">
                 <div class="row">
-                  <label for="element-width" class="col-5 col-md-5">Width:</label>
-                  <select name="element-width" id="element-width"  class="col-7 col-md-7"></select>
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-id">ID:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-id">
+                  </div>
                 </div>
-                <div class="row">
-                  <label for="element-id" class="col-5 col-md-5">ID:</label>
-                  <input type="text" id="element-id" class="col-5 col-md-5">
-                </div>
-              </form>
-            </div>
-
-            <div class="settings-block">
-              <div class="top-panel">
-                <form action="#">
-                  <label for="element-class">Class:</label>
-                  <input type="text" name="element-class" id="element-class" value=".section-1">
-                </form>
               </div>
-              <h2>Basic styles</h2>
-              <form action="#" class="element-settings">
+            </form>
+            <!-- settings form end -->
+
+            <!-- settings form -->
+            <form class="element-settings">
+              <div class="element-attributes">
                 <div class="row">
-                  <label for="element-paddings">Paddings:</label>
-                  <input type="text" id="element-paddings">
+                  <div class="col-4 col-md-4 d-flex align-items-center">
+                    <label for="element-class">Class:</label>
+                  </div>
+                  <div class="col-8 col-md-8 d-flex align-items-center">
+                    <input type="text" name="element-class" id="element-class" value=".section-1">
+                  </div>
+                </div>
+              </div>
+              <h2 class="opened">Basic styles</h2>
+              <div class="holder">
+                <div class="row">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-width">Width:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-width">
+                  </div>
                 </div>
                 <div class="row">
-                  <label for="element-margins">Margins:</label>
-                  <input type="text" id="element-margins">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-height">Height:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-height">
+                  </div>
                 </div>
                 <div class="row">
-                  <label for="element-bg-color">BG color</label>
-                  <input type="text" id="element-bg-color">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-paddings">Paddings:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-paddings">
+                  </div>
                 </div>
                 <div class="row">
-                  <label for="element-bg-image">BG image</label>
-                  <input type="text" id="element-bg-image">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-margins">Margins:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-margins">
+                  </div>
                 </div>
                 <div class="row">
-                  <label for="element-alignment">Alignment:</label>
-                  <select name="element-alignment" id="element-alignment"></select>
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-bg-color">BG color</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-bg-color">
+                  </div>
                 </div>
-              </form>
-            </div>
+                <div class="row">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-bg-image">BG image</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <input type="text" id="element-bg-image">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-5 col-md-5 d-flex align-items-center">
+                    <label for="element-alignment">Alignment:</label>
+                  </div>
+                  <div class="col-7 col-md-7 d-flex align-items-center">
+                    <select name="element-alignment" id="element-alignment"></select>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <!-- settings form end -->
           </aside>
           <!-- aside start -->
         </div>
       </div>
     </div>
   </div>
+
+  <script>
+    function allowDrop(ev) {
+      ev.preventDefault();
+    }
+
+    function drag(ev) {
+      ev.dataTransfer.setData("text", ev.target.id);
+    }
+
+    function drop(ev) {
+      ev.preventDefault();
+      var data = ev.dataTransfer.getData("text");
+      ev.target.appendChild(document.getElementById(data));
+    }
+  </script>
 
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
